<resources>
    <string name="app_name">microblog</string>
    <string name="login_microblog">登录微博</string>
    <string name="account_login">账号</string>
    <string name="password_login">密码</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="return_login">返回登录</string>
    <string name="copy">复制</string>
    <string name="register_success">注册成功</string>
    <string name="account_demo">100000000</string>
    <string name="please_remember_your_account">请记住你的账号</string>
    <string name="list">列表</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="microblog_list">微博列表</string>
    <string name="personal_center">个人中心</string>
    <string name="user_name">用户名</string>
    <string name="brief_introduction">简介：暂无简介</string>
    <string name="microblog">微博</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="send_time_demo">1-14 21:54</string>
    <string name="microblog_content">微博内容</string>
    <string name="microblog_body">微博正文</string>
    <string name="transmit">转发</string>
    <string name="comment">评论</string>
    <string name="send">发送</string>
    <string name="send_microblog">发微博</string>
    <string name="setting">设置</string>
    <string name="modify_info">修改信息</string>
    <string name="modify_password">修改密码</string>
    <string name="switch_account">切换账号</string>
    <string name="exit_microblog">退出微博</string>
    <string name="modify">修改</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="login_password">登录密码</string>
    <string name="confirm_again">再次确认</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="take_photos">拍照</string>
    <string name="photo_album">相册</string>
    <string name="error_user_name_null">用户名不能为空</string>
    <string name="error_account_null">账号不能为空</string>
    <string name="error_password_null">密码不能为空</string>
    <string name="error_password_confirm">密码确认错误</string>
    <string name="loading">正在登录中</string>
    <string name="confirm">确认</string>
    <string name="homepage">首页</string>
    <string name="like">赞</string>
</resources>