<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_bottom" />

    <RadioGroup
        android:id="@+id/rg_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#EFEDE9"
        android:paddingTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_list"
            style="@style/iconRBStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_list"
            android:text="@string/list" />

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/iconRBStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_message"
            android:text="@string/message" />

        <RadioButton
            android:id="@+id/rb_person"
            style="@style/iconRBStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_me"
            android:text="@string/me" />
    </RadioGroup>
</RelativeLayout>