<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout style="@style/titleBarStyle">

        <ImageButton
            android:id="@+id/ibt_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_return" />

        <TextView
            style="@style/titleTextStyle"
            android:layout_centerInParent="true"
            android:text="@string/modify_password" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title_bar"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                style="@style/simpleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                style="@style/simpleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/old_password" />

            <EditText
                android:id="@+id/et_old_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="10" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify" />
    </LinearLayout>
</RelativeLayout>